# aniballinux-live

./: LICENSE  Makefile  README.md  open-brave.sh  share-screen-x11vnc-laptop-box.sh  share-screen-x11vnc-laptop-hd.sh  share-screen-x11vnc-mobile.sh  share-screen-x11vnc-monitor.sh  share-screen-x11vnc.sh
browser-automation/: open-brave.sh
mouse-over-kde-plugin/: CMakeLists.txt  metadata.json  mouse_highlight.cpp  mouse_highlight.h
mouse-overlayer/: README.md  mouse_overlay.py
screen-sharing/: share-screen-x11vnc-mobile.sh  share-screen-x11vnc-monitor-box-1440x810.sh  share-screen-x11vnc-monitor.sh  share-screen-x11vnc.sh
